--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
             <a class="nav-link" routerLink="/">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/list">List</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" routerLink="/about">About</a>
           </li>
         </ul>
