--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,7 @@
         </div>
         <div class="card-body">
           <a class="btn btn-primary" routerLink="{{'/flight/'+flight.id}}"><i class="fa-solid fa-arrow-up-right-from-square"></i> Details</a>
+          <a class="btn btn-success ms-1" routerLink="/list"><i class="fa-solid fa-magnifying-glass"></i> Browse All</a>
         </div>
       </div>
     </div>
